# project_artm

./: .gitignore  PLSA_toy_dataset.xlsx  pyproject.toml  training_history_seed_123.json  vocab.json
artm_lib/: PLSA.ipynb  Untitled.ipynb  Untitled1.ipynb  config.py  prepare_artm_dataset.py
artm_lib/data/: collators.py  dataset.py  simple_loader.py
artm_lib/examples/: train_artm.py  train_plsa.py  train_plsa_2.py
artm_lib/plsa/: kimi_model.py  model.py
artm_lib/preprocessing/: format_utils.py  russian_utils.py  spacy_utils.py  tokenizer.py  vocabulary.py
artm_lib/scripts/: prepare_data.py
artm_lib_new/: PLSA.ipynb  Untitled.ipynb  config.py  main.py
artm_lib_new/data/: collators.py
artm_lib_new/data/parquets/: input.parquet
artm_lib_new/plsa/: model.py  plsa_numpy.py
artm_lib_new/preprocessing/: pipeline.py  steps.py  tokenizer.py  vocabulary.py
artm_lib_old/artm/: model.py  model2.py
artm_lib_old/examples/: train_plsa.py
artm_lib_old/io/: parquet_utils.py
