[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "artm-lib"
version = "0.1.0"
description = "Lightweight, dependency-free ARTM (Additive Regularization of Topic Models) implementation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "polars[rtcompat]>=1.36.1",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "ruff",                    # быстрый линтер/форматтер (альтернатива black + flake8)
    "mypy >= 1.0"              # опционально: статическая типизация
]
examples = [
    "matplotlib",              # для визуализации тем
    "pandas"                   # для совместимости в примерах
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.hatch.build.targets.wheel]
packages = ["artm_lib"]

[tool.hatch.build]
only-include = ["artm_lib", "README.md", "LICENSE"]

[tool.ruff]
# Опционально: если используешь ruff
select = ["E", "W", "F", "I", "UP", "YTT"]
ignore = ["E501"]  # длинные строки
line-length = 100
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
